# moos-ivp-ucsb

./: .gitignore  CMakeLists.txt  README  build.sh  clean.sh  merge_to_local.sh
missions/: README.md
missions/farm_w_sams_executive/: farm_w_sams_executive.bhv  farm_w_sams_executive.moos  launch.sh  sams_config.toml
missions/farm_w_sams_executive/image_to_csv_rs/src/: main.rs
missions/farm_w_sams_executive/mission_analysis/: plot_image.py  sample_data_plots.py
missions/line_follow_w_dyn_wpts_and_smpl_data/: README.md  clean.sh  convert-to-csv  launch.sh  line_follow_w_dyn_wpts_and_smpl_data.bhv  line_follow_w_dyn_wpts_and_smpl_data.moos
src/: CMakeLists.txt  libtool
src/cxx/: Makefile  libnetcdf_c++.4.dylib  libnetcdf_c++.lai  nctst  tst_failure
src/iAIS/: CAIS.cpp  CAIS.h  CMakeLists.PARSE  CMakeLists.txt  CiAIS.cpp  CiAIS.h  iAIS.moos  iAISMain.cpp  main_stdin.c  main_tcp.c  parseAIS.c  tcpsocket.cpp  tcpsocket.h  vdm_parse.cpp  vdm_parse.h
src/iGPSd/: CMakeLists.txt  iGPSd.moos
src/iGPSd/docs/: iGPSd.1
src/iGPSd/include/: AppVersion.h
src/iRecon/: CMakeLists.txt  Recon.cpp  Recon.cpp.1  Recon.h  Recon.h.1  ReconConnection.cpp  ReconConnection.h  iRecon.cpp  iRecon.moos  ntpshm.cpp  ntpshm.h
src/iReconS/: CMakeLists.txt  ReconConnectionS.cpp  ReconS.cpp  ReconS.h  iReconS.cpp  iReconS.moos  ntpshmS.cpp
src/iSerialMR/: CMakeLists.txt  CSerMR.cpp  CSerMR.h  CSerMR.h~  CiSerialMR.cpp  CiSerialMR.cpp~  CiSerialMR.h  CiSerialMR.h~  CiSerialMRMain.cpp  iSerialMR.moos
src/iWhoiMicroModem/: CMakeLists.txt  iWhoiMicroModem.moos  vehcile_config.txt
src/iWhoiMicroModem/docs}/: iWhoiMicroModem.1
src/iWhoiMicroModem/include/: AppVersion.h
src/iWhoiMicroModem/src/: WhoiCommandManager.cpp  iWhoiMicroModem.cpp
src/lib_HPLUtils/: .#NCData.cpp  CMakeLists.txt  CMakeLists.txt~  NCData.cpp  NCData.h  ReadNCFile.cpp  Utils.cpp  Utils.h
src/lib_YellowSubUtils/: CMakeLists.txt
src/lib_YellowSubUtils/include/: Semaphore.h  TimedLock.h
src/lib_YellowSubUtils/src/: Semaphore.cpp  TimedLock.cpp
src/lib_behavior-test/: #BHV_FollowCurrent.h#  .#BHV_FollowCurrent.h  AOF_SimpleWaypoint.cpp  AOF_SimpleWaypoint.h  BHV_ConstantAltitude.cpp  BHV_ConstantAltitude.cpp~  BHV_ConstantAltitude.h  BHV_ConstantAltitude.h~  BHV_FollowCurrent.cpp  BHV_FollowCurrent.h  BHV_Triangle.cpp  BHV_Triangle.cpp~  BHV_Triangle.h  BHV_Waypoint_latlon.cpp  BHV_Waypoint_latlon.h  CMakeLists.txt  README
src/netcdf_test/: .Tpo  CMakeLists.txt  makeme.sh  simple_xy_rd.cpp  simple_xy_wr.cpp
src/pDataWatch/: CMakeLists.txt  PDW_Info.cpp  PDW_Info.h  main.cpp  pDataWatch.cpp  pDataWatch.h
src/pIncludeSampleData/: CMakeLists.txt  IncludeSampleData.cpp  IncludeSampleData.h  IncludeSampleData_Info.cpp  IncludeSampleData_Info.h  main.cpp  pIncludeSampleData.moos
src/pIncludeSampleData/image_to_csv_rs/: Cargo.toml
src/pIncludeSampleData/image_to_csv_rs/binding/: image_to_csv_rs.h
src/pIncludeSampleData/image_to_csv_rs/src/: lib.rs
src/pLineFollow/: CMakeLists.txt  LineFollow.cpp  LineFollow.h  LineFollow_Info.cpp  LineFollow_Info.h  main.cpp  pLineFollow.moos
src/pLineTurn/: CMakeLists.txt  LineTurn.cpp  LineTurn.h  LineTurn_Info.cpp  LineTurn_Info.h  main.cpp  pLineTurn.moos
src/pNodeZip/: CMakeLists.txt  NZ_Info.cpp  NZ_Info.h  NZ_MOOSApp.cpp  NZ_MOOSApp.h  alpha.bhv  alpha.moos  main.cpp
src/pSAMSExecutive/: CMakeLists.txt  SAMSExecutive.cpp  SAMSExecutive.h  SAMSExecutive_Info.cpp  SAMSExecutive_Info.h  lib_mariner_sams.cpp  lib_mariner_sams.h  main.cpp  pSAMSExecutive.moos
src/pSAMSExecutive/mariner_sams_rs/: Cargo.toml
src/pSAMSExecutive/mariner_sams_rs/src/: lib.rs  main.rs  tests.rs
src/pSAMSExecutive/parse_toml_rs/: Cargo.toml  sams_config_test.toml
src/pSAMSExecutive/parse_toml_rs/binding/: parse_toml_rs.h
src/pSAMSExecutive/parse_toml_rs/src/: lib.rs  main.rs  tests.rs
src/pSendModemMsg/: CMakeLists.txt  PSM_Info.cpp  PSM_Info.cpp~  PSM_Info.h  PSM_MOOSApp.cpp  PSM_MOOSApp.h  main.cpp
src/pSimDistanceGenerator/: CMakeLists.txt  SimDistanceGenerator.cpp  SimDistanceGenerator.h  SimDistanceGenerator_Info.cpp  SimDistanceGenerator_Info.h  main.cpp  pSimDistanceGenerator.moos
src/uSendModemMsg/: CMakeLists.txt  USM_Info.cpp  USM_Info.h  USM_MOOSApp.cpp  USM_MOOSApp.h  main.cpp
src/uSimROMS/: #NCData.cpp#  #NCData.h#  #ROMSUtils.h#  .#NCData.cpp  .#NCData.h  CMakeLists.txt  CMakeLists.txt~  NCData.cpp  NCData.h  NCData.h~  ReadNCFile.cpp  ReadNCFile.cpp~  SafeDepth  USC_Info.cpp  USC_Info.h  USC_MOOSApp.cpp  USC_MOOSApp.h  USC_netcdf_rd.cpp  USR_Info.cpp  USR_Info.h  USR_MOOSApp.cpp  USR_MOOSApp.h  USR_ReadNCFile.cpp  bravo.cfd  main.cpp  makeme.sh  nc_tools.h  simple_nc.cpp  simple_nc.h
src/uSimROMS2/: .LastOpenedMOOSLogDirectory  CMakeLists.txt  USC_Info.cpp  USC_MOOSApp2.cpp  USC_MOOSApp2.h  alpha.bhv  alpha.moos  latest.nc  main.cpp  nc_tools.cpp  salinity.txt  test.moos
src/uSimROMS3/: CMakeLists.txt  USR_Info.cpp  USR_Info.h  USR_MOOSApp.cpp  USR_MOOSApp.h  USR_ReadNCFile.cpp  main.cpp
src/uSimROMS_Scalar/: .LastOpenedMOOSLogDirectory  CMakeLists.txt  USC_Info.cpp  USC_MOOSApp.cpp  USC_MOOSApp.h  alpha.moos  main.cpp  test.moos  uSimCurrent.moos
src/uSimROMS_Scalar/MOOSLog_11_6_2014_____21_33_39/: MOOSLog_11_6_2014_____21_33_39._moos  MOOSLog_11_6_2014_____21_33_39.ylog
src/uSimROMS_Scalar/MOOSLog_11_6_2014_____21_41_09/: MOOSLog_11_6_2014_____21_41_09._moos  MOOSLog_11_6_2014_____21_41_09.alog  MOOSLog_11_6_2014_____21_41_09.ylog
src/uSimROMS_Scalar/MOOSLog_12_6_2014_____14_16_12/: MOOSLog_12_6_2014_____14_16_12._moos  MOOSLog_12_6_2014_____14_16_12.alog  MOOSLog_12_6_2014_____14_16_12.ylog
src/uSimROMS_Scalar/MOOSLog_12_6_2014_____14_20_50/: MOOSLog_12_6_2014_____14_20_50._moos  MOOSLog_12_6_2014_____14_20_50.ylog
src/uSimROMS_Scalar/MOOSLog_12_6_2014_____14_33_38/: MOOSLog_12_6_2014_____14_33_38._moos  MOOSLog_12_6_2014_____14_33_38.alog  MOOSLog_12_6_2014_____14_33_38.ylog
src/uSimROMS_Scalar/MOOSLog_12_6_2014_____14_37_31/: MOOSLog_12_6_2014_____14_37_31._moos  MOOSLog_12_6_2014_____14_37_31.alog  MOOSLog_12_6_2014_____14_37_31.ylog
(+13 files in other folders)
